<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/sina_oauth"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sina_oauth" />
    
    <Button
        android:id="@+id/sina_place"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sina_place_nearby" />

    <Button 
        android:id="@+id/gps_locaton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gps_location"/>
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sina_result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />
    </ScrollView>

</LinearLayout>